--- a/frontend/src/modules/common/components/FormTextInput/resources/styles/form-text-input.styles.scss
+++ b/frontend/src/modules/common/components/FormTextInput/resources/styles/form-text-input.styles.scss
@@ -3,7 +3,7 @@
         display: block;
         margin-bottom: 2px;
         font-family: "IBM Plex Sans";
-        font-size: 12px;
+        font-size: 14px;
         font-style: normal;
         font-weight: 500;
         line-height: 18px;
@@ -15,21 +15,21 @@
     }
 
     &__required-disabled {
-        color: #495057;
+        color: #545B64;
     }
 
     &__field {
         width: 100%;
-        height: 32px;
-        padding: 7px 6px;
+        height: 40px;
+        padding: 7px 12px;
         font-family: "IBM Plex Sans";
-        font-size: 12px;
+        font-size: 14px;
         font-style: normal;
         font-weight: 400;
         line-height: 18px;
         color: var(--Text-default, #1B1F24);
         background-clip: padding-box;
-        border-radius: var(--Border-radius, 8px);
+        border-radius: var(--Border-radius, 10px);
         border: 1px solid var(--Border-default, #CCD1D5);
         background: var(--Background-surface-layer-01, #FFF);
         transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -64,6 +64,7 @@
         font-size: 10px;
         margin-top: 2px;
         height: 14px;
+
         &__error-enabled {
             margin-bottom: 4px;
             display: block;
